# app/Modules/Auth/Models/Role.php
@@ -3,6 +3,7 @@
 namespace App\Modules\Auth\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
 /**
@@ -28,4 +29,10 @@ class Role extends Model
     protected $casts = [
         
     ];
+
+    public function permitions(): BelongsToMany {
+        return $this->belongsToMany(Permition::class)
+                    ->using(PermitionRole::class)
+                    ->withTimestamps();
+    }
 }
